kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-registry
  labels:
    app: ai-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-registry
  template:
    metadata:
      labels:
        app: ai-registry
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: ai-registry-storage
          emptyDir: {}
      containers:
        - name: ai-registry
          image: ai-registry
          volumeMounts:
            - name: ai-registry-storage
              mountPath: /storage
          command:
            - gunicorn
            - ai_registry.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "4"
            - --timeout
            - "90"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 500Mi
              cpu: 500m
            limits:
              memory: 500Mi
              cpu: 1000m
        - name: ai-registry-nginx
          image: nginx:alpine
          volumeMounts:
            - name: ai-registry-storage
              mountPath: /usr/share/nginx/html
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 50Mi
              cpu: 50m
