kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: enable-cors
spec:
  headers:
    accessControlAllowOriginList:
      - "https://registerui.djnd.si"
      - "https://registerui.danesjenovdan.si"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-registry
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - registerui.djnd.si
        - registerui.danesjenovdan.si
      secretName: ai-registry-tls
  rules:
    - host: registerui.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-registry
                port:
                  number: 8000
    - host: registerui.danesjenovdan.si
      http: *http_paths
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-registry-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: ai-registry-enable-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.registerui.djnd.si
      secretName: ai-registry-nginx-tls
  rules:
    - host: files.registerui.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-registry-nginx
                port:
                  number: 80
